tests/types_first_refresh_errors/types_first_refresh_errors.exp

Server should start in types-first mode
Error ------------------------------------------------------------------------------------------------------- bar.js:3:1

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-type]

   bar.js:3:1
   3| require('./foo') as string;
      ^^^^^^^^^^^^^^^^

References:
   foo.js:3:18
   3| module.exports = 0;
                       ^ [1]
   bar.js:3:21
   3| require('./foo') as string;
                          ^^^^^^ [2]



Found 1 error

Fixing an error upstream should clear that error downstream
No errors!
